fix(header-title): added overflow:hidden (#1029)

--- a/tegel/src/components/header/webcomponent/header-brand-symbol/header-brand-symbol.scss
+++ b/tegel/src/components/header/webcomponent/header-brand-symbol/header-brand-symbol.scss
@@ -13,7 +13,7 @@
     background-repeat: no-repeat;
   }
 
-  @media (min-width: 521px) {
+  @media (min-width: 992px) {
     sdds-header-item {
       display: block;
     }
